# pyrattle

./: .gitignore  README.md  main.py  pyproject.toml
pyrattle/: __init__.py  errors.py  pyrattle.py
tests/: test_parsing.py
